legacy/differential_testing/gcc_regression/gcc_reg_cb/results/gcc482/save_st/pr80210-2.c-4.8.2-2.out.txt
pr80210-2.c:5:9: error: attribute(target("no-powerpc-gpopt")) is unknown
 #pragma GCC target "no-powerpc-gpopt"
         ^
pr80210-2.c:8:1: error: attribute(target("no-powerpc-gpopt")) is unknown
 {
 ^
